# Generative-Data-Augmentation

./: .gitignore  README.md  main.py  pyproject.toml  try.py
Paper/: Generative-Data-Augmentation.tex
helpers/: GPU_Test.py  merge_images.py
main/: GAN.py  try.py
models/: Fine_Tuned_Resnet50.py  SmallCNN.py
models/Yet to Try/: Efficient_Net_B0.py
src/: try.py
src/eval/: abc.py  ft_resnet50.py  naive_flower102cnn.py
src/gan/: __init__.py  dc_gan.py  diffusion.py  gan.py
src/primitive/: __init__.py
src/primitive/oxford102/: loader.py  train.py
src/utils/: logger.py  tensor_dataset.py
