[project]
name = "generative-data-augmentation"
version = "0.1.0"
description = ""
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true

[project.scripts]
oxford = 'primitive.oxford102.train:cli'
